// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`createRootComponent should isolate props for each root config in render function 1`] = `
{
  "$appearance": {
    "background": {
      "blendMode": "multiply",
      "filterBlur": 25,
      "filterBrightness": 1,
      "filterContrast": 1,
      "filterGrayscale": 0,
      "filterSaturate": 1,
      "image": "file:///Users/shannon.hochkins/Documents/dev/hakit/packages/editor/src/features/dashboard/Editor/createRootComponent/default-background.jpg",
      "useAdvancedFilters": false,
      "useImage": true,
    },
    "design": {
      "backgroundAttachment": "fixed",
      "backgroundColor": "color-mix(in srgb, var(--clr-primary-a10) 90%, transparent 10%)",
      "backgroundImage": undefined,
      "backgroundPosition": "center center",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "cover",
      "backgroundSizeCustom": "",
      "backgroundType": "color",
      "borderRadius": "1rem",
      "boxShadowBlur": 30,
      "boxShadowColor": "rgba(0,0,0,0.1)",
      "boxShadowEnabled": true,
      "boxShadowSpread": 10,
      "glassBackgroundOpacity": 0.1,
      "glassBlur": 2,
      "glassBlurAmount": 5,
      "glassColor": "rgba(255, 255, 255, 0.1)",
      "glassDisplacementScale": 53,
      "glassOutline": 1,
      "glassOutlineTransparency": 0.81,
      "glassSpecularOpacity": 0.1,
      "glassSpecularSaturation": 2,
      "image": undefined,
      "useImage": false,
    },
    "theme": {
      "colors": {
        "lightMode": false,
        "primary": "rgb(27, 1, 204)",
        "semantics": {
          "danger": "#9C2121",
          "info": "#21498A",
          "success": "#22946E",
          "warning": "#A87A2A",
        },
        "surface": "rgb(18, 18, 18)",
        "tonalityMix": 0.3,
      },
      "override": true,
    },
    "typography": {
      "baseFontSize": "16px",
      "bodyWeight": 400,
      "fontFamily": "roboto",
      "headingWeight": 600,
      "letterSpacing": 0,
      "lineHeight": 1.5,
      "override": true,
      "useAdvancedTypography": false,
    },
  },
  "$styles": {
    "css": "",
  },
  "_dashboard": {
    "id": "test-dashboard",
  },
  "_editMode": undefined,
  "_editor": {
    "document": null,
    "iframe": null,
  },
  "_styleOverrides": {
    "style": "body { margin: 0; }",
  },
  "device": "mobile",
  "id": undefined,
  "sharedField": "isolated value 1",
  "testField1": "custom value 1",
}
`;

exports[`createRootComponent should isolate props for each root config in render function 2`] = `
{
  "$appearance": {
    "background": {
      "blendMode": "multiply",
      "filterBlur": 25,
      "filterBrightness": 1,
      "filterContrast": 1,
      "filterGrayscale": 0,
      "filterSaturate": 1,
      "image": "file:///Users/shannon.hochkins/Documents/dev/hakit/packages/editor/src/features/dashboard/Editor/createRootComponent/default-background.jpg",
      "useAdvancedFilters": false,
      "useImage": true,
    },
    "design": {
      "backgroundAttachment": "fixed",
      "backgroundColor": "color-mix(in srgb, var(--clr-primary-a10) 90%, transparent 10%)",
      "backgroundImage": undefined,
      "backgroundPosition": "center center",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "cover",
      "backgroundSizeCustom": "",
      "backgroundType": "color",
      "borderRadius": "1rem",
      "boxShadowBlur": 30,
      "boxShadowColor": "rgba(0,0,0,0.1)",
      "boxShadowEnabled": true,
      "boxShadowSpread": 10,
      "glassBackgroundOpacity": 0.1,
      "glassBlur": 2,
      "glassBlurAmount": 5,
      "glassColor": "rgba(255, 255, 255, 0.1)",
      "glassDisplacementScale": 53,
      "glassOutline": 1,
      "glassOutlineTransparency": 0.81,
      "glassSpecularOpacity": 0.1,
      "glassSpecularSaturation": 2,
      "image": undefined,
      "useImage": false,
    },
    "theme": {
      "colors": {
        "lightMode": false,
        "primary": "rgb(27, 1, 204)",
        "semantics": {
          "danger": "#9C2121",
          "info": "#21498A",
          "success": "#22946E",
          "warning": "#A87A2A",
        },
        "surface": "rgb(18, 18, 18)",
        "tonalityMix": 0.3,
      },
      "override": true,
    },
    "typography": {
      "baseFontSize": "16px",
      "bodyWeight": 400,
      "fontFamily": "roboto",
      "headingWeight": 600,
      "letterSpacing": 0,
      "lineHeight": 1.5,
      "override": true,
      "useAdvancedTypography": false,
    },
  },
  "$styles": {
    "css": "",
  },
  "_dashboard": {
    "id": "test-dashboard",
  },
  "_editMode": undefined,
  "_editor": {
    "document": null,
    "iframe": null,
  },
  "_styleOverrides": {
    "style": "body { margin: 0; }",
  },
  "device": "mobile",
  "id": undefined,
  "sharedField": "isolated value 2",
  "testField2": 99,
}
`;
